--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,11 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -68,6 +69,18 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0-rc2</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
@@ -93,7 +106,7 @@
                 </executions>
                 <configuration>
                     <sources>
-                        <source>src/main/java/smartbudget/view</source>
+                        <source>src/main/java/smartbudget/view/xml</source>
                     </sources>
                     <transformSchemas>
                         <transformSchema>
