--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,8 @@ postgres:
   url: jdbc:postgresql://localhost:5432/budget/
   user: ${POSTGRESQL_USER}
   password: ${POSTGRESQL_PASSWORD}
+
+security:
+  user: ${MAIN_USER}
+  password: ${MAIN_PASSWORD}
+  role: ${MAIN_ROLE}
