--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 postgres:
-  url: jdbc:postgresql://localhost:5432/budget/
-  user: ${POSTGRESQL_USER}
-  password: ${POSTGRESQL_PASSWORD}
+  url: ${DB_URL}
+  user: ${DATABASE_USER}
+  password: ${DATABASE_PASSWORD}
 
 security:
   user: ${MAIN_USER}
